# ClearCore-Motion-Stack

./: .editorconfig  .gitignore  AGENTS.md  LICENSE-OPENER.txt  README.md
EtherCATMaster/: CMakeLists.txt  build-installer.ps1  build.ps1
EtherCATMaster/installer/: EtherCATMaster.iss
EtherCATMaster/src/: EthercatMasterThread.cpp  EthercatMasterThread.h  EthercatTypes.h  MainWindow.cpp  MainWindow.h  app_icon.rc  main.cpp  resources.qrc
MotionBench/: CMakeLists.txt  README.md  build_vs.cmd
MotionBench/build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BoardModeToolApp.vcxproj  BoardModeToolApp.vcxproj.filters  BoardModeToolApp_autogen.vcxproj  BoardModeToolApp_autogen.vcxproj.filters  BoardModeToolApp_automoc_json_extraction.vcxproj  BoardModeToolApp_automoc_json_extraction.vcxproj.filters  BoardModeToolApp_copy_qml.vcxproj  BoardModeToolApp_copy_qml.vcxproj.filters  BoardModeToolApp_copy_res.vcxproj  BoardModeToolApp_copy_res.vcxproj.filters  BoardModeToolApp_qmlimportscan.vcxproj  BoardModeToolApp_qmlimportscan.vcxproj.filters  BoardModeToolApp_qmllint.vcxproj  BoardModeToolApp_qmllint.vcxproj.filters  BoardModeToolApp_qmllint_json.vcxproj  BoardModeToolApp_qmllint_json.vcxproj.filters  BoardModeToolApp_qmllint_module.vcxproj  BoardModeToolApp_qmllint_module.vcxproj.filters  BoardModeToolApp_qmltyperegistration.vcxproj  BoardModeToolApp_qmltyperegistration.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  MotionBench.sln  MotionBenchApp.vcxproj  MotionBenchApp.vcxproj.filters  MotionBenchApp_autogen.vcxproj  MotionBenchApp_autogen.vcxproj.filters  MotionBenchApp_automoc_json_extraction.vcxproj  MotionBenchApp_automoc_json_extraction.vcxproj.filters  MotionBenchApp_copy_qml.vcxproj  MotionBenchApp_copy_qml.vcxproj.filters  MotionBenchApp_copy_res.vcxproj  MotionBenchApp_copy_res.vcxproj.filters  (+36 more)
MotionBench/build-vs/.qt/: BoardModeToolApp_qml.cmake  BoardModeToolApp_res.cmake  MotionBenchApp_qml.cmake  MotionBenchApp_res.cmake  QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
MotionBench/build-vs/BoardModeTool/: BoardModeToolApp_qml_module_dir_map.qrc  qmldir
MotionBench/build-vs/BoardModeToolApp_autogen/: mocs_compilation_Release.cpp
MotionBench/build-vs/MotionBench/: MotionBenchApp_qml_module_dir_map.qrc  qmldir
MotionBench/build-vs/MotionBenchApp_autogen/: mocs_compilation_Release.cpp
MotionBench/build-vs/Release/: BoardModeTool.exp  BoardModeTool.lib  BoardModeToolApp.exp  BoardModeToolApp.lib  MotionBench.exp  MotionBench.lib  MotionBenchApp.exp  MotionBenchApp.lib
MotionBench/build-vs/meta_types/: BoardModeToolApp_json_file_list.txt  BoardModeToolApp_json_file_list.txt.timestamp  MotionBenchApp_json_file_list.txt  MotionBenchApp_json_file_list.txt.timestamp  qt6boardmodetoolapp_metatypes.json.gen  qt6motionbenchapp_metatypes.json.gen
MotionBench/build-vs/qmltypes/: MotionBenchApp_foreign_types.txt
MotionBench/cmake/: DeployQt.cmake
MotionBench/docs/: ARCHITECTURE.md  CLEARLINK_OBJECT_MAP.md  VALIDATION.md
MotionBench/installer/: MotionBench.iss
MotionBench/qml/: BoardModeTool.qml  Main.qml
MotionBench/resources/: BoardModeToolApp.rc  BoardModeToolIcons.qrc  MotionBenchApp.rc  MotionBenchIcons.qrc
MotionBench/scripts/: Validate-QtDeploy.ps1
MotionBench/src/: main.cpp
MotionBench/src/boardmode/: BoardModeToolService.cpp  BoardModeToolService.h  main.cpp
MotionBench/src/device/: ClearLinkObjectMap.cpp  ClearLinkObjectMap.h  DeviceIoWorker.cpp  DeviceIoWorker.h  DeviceService.cpp  DeviceService.h
MotionBench/src/discovery/: ListIdentityService.cpp  ListIdentityService.h
MotionBench/src/protocol/: CipPath.cpp  CipPath.h  (+2 more)
(+347 files in other folders)
